<resources>
    <string name="app_name">Bus Management System</string>
    <string name="network_error">Please turn on your Mobile Data or connect to a WiFi network</string>
    <string name="app_name_short">BMS</string>

    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password_hint">Password</string>
    <string name="or_signup_text">Don\'t have an account already?</string>
    <string name="mobile_num_hint">Mobile number</string>
    <string name="or_signin_text">Already have an account?</string>
    <string name="signUp_Success">Account created successfully!</string>
    <string name="signUp_UnSuccess">Account already exists!</string>
    <string name="password_mismatch">Password not matched</string>
    <string name="wrong_Input">Error Signing In, try rechecking password</string>
    <string name="signout">SignOut</string>
    <string name="no_acc_exist">Account of given Enrollment number is not active. Please Signup.</string>
    <string name="wrong_password">Please check the password</string>
    <string name="invalid_fields">Please fill in the fields correctly</string>

    <string name="select_arr_stop">Select Stop for arrival</string>
    <string name="select_arr_shift">Select Shift for arrival</string>
    <string name="select_arrival">Arrival</string>

    <string name="select_dep_stop">Select Stop for departure</string>
    <string name="select_dep_shift">Select Shift for departure</string>
    <string name="select_departure">Departure</string>

    <string name="shift_1">First Shift</string>
    <string name="shift_2">Second Shift</string>
    <string name="choice_lock">lock</string>
    <string name="choice_unlock">unlock</string>
    <string name="enter_otp_message">Please enter the received OTP below and tap Verify</string>
    <string name="enter_otp_title">Enter OTP</string>
    <string name="cancel_otp_dialog">Cancel</string>
    <string name="resend_otp_dialog">Resend</string>
    <string name="verify_otp_dialog">Verify</string>
    <string name="invalid_code_otp_dialog">Please re-check the code</string>
    <string name="code_resent_otp_dialog">Code resent</string>
    <string name="country_code">+91</string>
    <string name="enroll_num_not_found">No matching Enrollment Number found. Try checking the Enrollment Number</string>
    <string name="acc_already_exist">An account of given Enrollment Number is already active. Try Signing in.</string>
    <string name="firestore_doc_get_failure">Some error occurred, please try after some time</string>
    <string name="play_services_error">Seems like your device is not supported for Google Play Services</string>
    <string name="play_services_cancelled">Google Play Service must be Installed or Enabled</string>
    <string name="invalid_mobile_num">
        Please enter valid mobile number.\n
        Example: +917746055181
    </string>
    <string name="mobile_num_already_exist">The Mobile Number is already in use.</string>
    <string name="mobile_num_exist_check_error">An Error occurred while Signing Up. Please retry later to resolve.</string>
    <string name="verification_failure">An Error occurred on our side. Please retry later to resolve.</string>
    <string name="sign_up_error">An error occurred while Signup. Please retry later to resolve.</string>
    <string name="empty_fields">Please fill the field(s).</string>
    <string name="enter_enroll_num">Enrollment Number</string>
    <string name="enter_email">Email</string>
    <string name="signup_fields_mismatch">Fields entered did not match. Try rechecking the input.</string>

    <string name="password_rules">
        - Lowercase character (a-z)\n
        - Uppercase character (A-Z)\n
        - Digit (0-9)\n
        - Special character (!@#$&amp;^+=\-*,._?)
    </string>
    <string name="sign_in_error">An error occurred while Signing In, please try later to resolve</string>
    <string name="choices_unchanged">No changes observed, all good</string>
    <string name="updated_stop">Stop updated successfully!</string>
    <string name="bms_preference_name">BMS_Preferences</string>
    <string name="updated_shift">Shift updated successfully!</string>
    <string name="stop_shift_update_error">Oops! Unable to update choices</string>
    <string name="pref_stop_dep_key">STOP_DEP</string>
    <string name="pref_shift_dep_key">SHIFT_DEP</string>
    <string name="pref_stop_arr_key">STOP_ARR</string>
    <string name="pref_shift_arr_key">SHIFT_ARR</string>
    <string name="svvv">SVVV</string>
    <string name="enter_name">Name</string>
    <string name="enter_chaalan_num">Chaalan Number</string>
    <string name="enter_mob_num">Mobile Number</string>
    <string name="sign_up_next">NEXT</string>
    <string name="acc_type_student">Student</string>
    <string name="acc_type_faculty">Faculty</string>
    <string name="acc_type">Choose account type</string>
    <string name="enter_enroll_emp_num">Enrollment num/Employee Id</string>
    <string name="shift">shift</string>
    <string name="na">na</string>
    <string name="stop">stop</string>

    <string-array name="stops_list">
        <item>Indore</item>
        <item>Ujjain</item>
        <item>Dewas</item>
    </string-array>

    <string-array name="acc_type">
        <item>Student</item>
        <item>Faculty</item>
    </string-array>
</resources>
