<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_snackbar_signin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin_bg_gradient"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/svvv_bms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/divider"
            android:layout_toRightOf="@+id/divider"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/svvv"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/app_name_short"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/svvv_logo"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/divider"
            android:layout_toStartOf="@+id/divider"
            android:contentDescription="@string/app_name_short"
            android:src="@drawable/svvv_logo" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="7dp"
        app:contentPadding="25dp">

        <ProgressBar
            android:id="@+id/progressBar_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/svvv_bms"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/acc_type_button_signin"
                style="@style/AppTheme.Button.Sec"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_sec_b"
                android:drawableEnd="@drawable/ic_down_b"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/acc_type_student"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@style/AppTheme.TextInputLayout_SignIn"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/enroll_num_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_enroll_emp_num"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@color/edittext_hint"
                    android:textSize="16sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/AppTheme.TextInputLayout_SignIn"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/password_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textWebPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@color/edittext_hint"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signin"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_primary_b"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/to_signup"
        style="@style/AppTheme.Button"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_secondary"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>