<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <!--<android.support.design.widget.NavigationView-->
    <!--android:id="@+id/nav_view"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_gravity="start"-->
    <!--android:background="@android:color/background_light"-->
    <!--android:fitsSystemWindows="true"-->
    <!--android:visibility="visible"-->
    <!--app:elevation="8dp"-->
    <!--app:headerLayout="@layout/nav_header" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signup_bg_gradient">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/nav_drawer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/nav_drawer_bg"
                android:contentDescription="@string/app_name"
                android:padding="3dp"
                app:srcCompat="@drawable/ic_nav_drawer" />

            <LinearLayout
                android:id="@+id/svvv_bms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/svvv"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/app_name_short"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/gray_bg"
                app:cardElevation="7dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:text="@string/select_arrival"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccentDark"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/edit_arrival"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:background="@drawable/nav_drawer_bg"
                            android:contentDescription="@string/app_name"
                            android:padding="3dp"
                            app:srcCompat="@drawable/ic_edit" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="#dadada" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:text="@string/shift"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccentDark"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/shift_arr_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@string/na"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccentDark"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:text="@string/stop"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccentDark"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/stop_arr_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:maxLines="2"
                            android:text="@string/na"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccentDark"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/gray_bg"
                app:cardElevation="7dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:text="@string/select_departure"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccentDark"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/edit_dep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:background="@drawable/nav_drawer_bg"
                            android:contentDescription="@string/app_name"
                            android:padding="3dp"
                            app:srcCompat="@drawable/ic_edit" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="#dadada" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:text="@string/shift"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccentDark"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/shift_dep_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@string/na"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccentDark"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:text="@string/stop"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccentDark"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/stop_dep_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:maxLines="2"
                            android:text="@string/na"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccentDark"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
